# udynlink-app

./: CMakeLists.txt  README.md  prj.conf  west.yml
hello_world/: CMakeLists.txt
hello_world_cpp/: CMakeLists.txt  hello_world.cpp
src/: main.c
